Auth, Frontend store/router scaffolding

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.aef21d46916234891e42.hot-update.js": "/js/app.aef21d46916234891e42.hot-update.js",
-    "/js/app.60a55279d4aa8d37fafe.hot-update.js": "/js/app.60a55279d4aa8d37fafe.hot-update.js",
-    "/js/app.8fa52a2e0815de7136d9.hot-update.js": "/js/app.8fa52a2e0815de7136d9.hot-update.js",
-    "/js/app.3a43fe54ee8457e63e35.hot-update.js": "/js/app.3a43fe54ee8457e63e35.hot-update.js",
-    "/js/app.70035e3c5bb9b62df66e.hot-update.js": "/js/app.70035e3c5bb9b62df66e.hot-update.js",
-    "/js/app.e91222cdd42d41ecdaa8.hot-update.js": "/js/app.e91222cdd42d41ecdaa8.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
