More router scaffolding

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,21 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.078b20c92bd9a0d058ae.hot-update.js": "/js/app.078b20c92bd9a0d058ae.hot-update.js",
+    "/js/app.25101ec8d73e56256a13.hot-update.js": "/js/app.25101ec8d73e56256a13.hot-update.js",
+    "/js/app.6d673a2e8024b6571cbb.hot-update.js": "/js/app.6d673a2e8024b6571cbb.hot-update.js",
+    "/js/app.45aae4f1ade9481b980b.hot-update.js": "/js/app.45aae4f1ade9481b980b.hot-update.js",
+    "/js/app.5b74260f3349eecebbc8.hot-update.js": "/js/app.5b74260f3349eecebbc8.hot-update.js",
+    "/js/app.8ca5427e83b62f1e3816.hot-update.js": "/js/app.8ca5427e83b62f1e3816.hot-update.js",
+    "/js/app.27214cb96f79cc87aa59.hot-update.js": "/js/app.27214cb96f79cc87aa59.hot-update.js",
+    "/js/app.277542ba00ffd6bb869f.hot-update.js": "/js/app.277542ba00ffd6bb869f.hot-update.js",
+    "/js/app.d56f93945c063e8e15c9.hot-update.js": "/js/app.d56f93945c063e8e15c9.hot-update.js",
+    "/js/app.89b8bd37fc9d5c452f5b.hot-update.js": "/js/app.89b8bd37fc9d5c452f5b.hot-update.js",
+    "/js/app.63c5d8e8bcb282861d78.hot-update.js": "/js/app.63c5d8e8bcb282861d78.hot-update.js",
+    "/js/app.ab26a837a745d66718c2.hot-update.js": "/js/app.ab26a837a745d66718c2.hot-update.js",
+    "/js/app.36d27f8eae19ee002604.hot-update.js": "/js/app.36d27f8eae19ee002604.hot-update.js",
+    "/js/app.8c378381d86c905ab0f4.hot-update.js": "/js/app.8c378381d86c905ab0f4.hot-update.js",
+    "/js/app.40cd2fa437075f5544d1.hot-update.js": "/js/app.40cd2fa437075f5544d1.hot-update.js",
+    "/js/app.2f223c6dac0fbd5b1b48.hot-update.js": "/js/app.2f223c6dac0fbd5b1b48.hot-update.js",
+    "/js/app.b89c559c06a088befbb6.hot-update.js": "/js/app.b89c559c06a088befbb6.hot-update.js"
 }
