Finish initializing Router

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -17,5 +17,21 @@
     "/js/app.8c378381d86c905ab0f4.hot-update.js": "/js/app.8c378381d86c905ab0f4.hot-update.js",
     "/js/app.40cd2fa437075f5544d1.hot-update.js": "/js/app.40cd2fa437075f5544d1.hot-update.js",
     "/js/app.2f223c6dac0fbd5b1b48.hot-update.js": "/js/app.2f223c6dac0fbd5b1b48.hot-update.js",
-    "/js/app.b89c559c06a088befbb6.hot-update.js": "/js/app.b89c559c06a088befbb6.hot-update.js"
+    "/js/app.b89c559c06a088befbb6.hot-update.js": "/js/app.b89c559c06a088befbb6.hot-update.js",
+    "/js/app.6b0debdfceb1132c0a81.hot-update.js": "/js/app.6b0debdfceb1132c0a81.hot-update.js",
+    "/js/app.5534b025573662d9f525.hot-update.js": "/js/app.5534b025573662d9f525.hot-update.js",
+    "/js/app.e459bb20be931684f4f1.hot-update.js": "/js/app.e459bb20be931684f4f1.hot-update.js",
+    "/js/app.1fa6eb2df85521ad710c.hot-update.js": "/js/app.1fa6eb2df85521ad710c.hot-update.js",
+    "/js/app.98ff4de8e1025c8b4857.hot-update.js": "/js/app.98ff4de8e1025c8b4857.hot-update.js",
+    "/js/app.1ad3d867527d7644598f.hot-update.js": "/js/app.1ad3d867527d7644598f.hot-update.js",
+    "/js/app.ebfe03fd168fab42d248.hot-update.js": "/js/app.ebfe03fd168fab42d248.hot-update.js",
+    "/js/app.6ef21a8620131baec3dc.hot-update.js": "/js/app.6ef21a8620131baec3dc.hot-update.js",
+    "/js/app.8bf586b29c3435701195.hot-update.js": "/js/app.8bf586b29c3435701195.hot-update.js",
+    "/js/app.0b7f5f7dbf0e4e6af3be.hot-update.js": "/js/app.0b7f5f7dbf0e4e6af3be.hot-update.js",
+    "/js/app.7062f463fa94d0846091.hot-update.js": "/js/app.7062f463fa94d0846091.hot-update.js",
+    "/js/app.0d249f6656e1866d7cdf.hot-update.js": "/js/app.0d249f6656e1866d7cdf.hot-update.js",
+    "/js/app.c89ffbbf065339c7bd26.hot-update.js": "/js/app.c89ffbbf065339c7bd26.hot-update.js",
+    "/js/app.517ca3c8bf7c43e4d067.hot-update.js": "/js/app.517ca3c8bf7c43e4d067.hot-update.js",
+    "/js/app.6871687a9343010a54f5.hot-update.js": "/js/app.6871687a9343010a54f5.hot-update.js",
+    "/js/app.bf2154c3285a659dc574.hot-update.js": "/js/app.bf2154c3285a659dc574.hot-update.js"
 }
