Scaffold logout procedure

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -32,5 +32,14 @@
     "/js/app.aa9b93ed9b0b1d952c52.hot-update.js": "/js/app.aa9b93ed9b0b1d952c52.hot-update.js",
     "/js/app.a2bd1832cf33cc0c304c.hot-update.js": "/js/app.a2bd1832cf33cc0c304c.hot-update.js",
     "/js/app.55c046025abc6d2ceac6.hot-update.js": "/js/app.55c046025abc6d2ceac6.hot-update.js",
-    "/js/app.b333e53c20a7511ade57.hot-update.js": "/js/app.b333e53c20a7511ade57.hot-update.js"
+    "/js/app.b333e53c20a7511ade57.hot-update.js": "/js/app.b333e53c20a7511ade57.hot-update.js",
+    "/js/app.ab2412b3f2e4953f50e9.hot-update.js": "/js/app.ab2412b3f2e4953f50e9.hot-update.js",
+    "/js/app.1a0f659e741d74ace6c0.hot-update.js": "/js/app.1a0f659e741d74ace6c0.hot-update.js",
+    "/js/app.97118790ec7631ce076f.hot-update.js": "/js/app.97118790ec7631ce076f.hot-update.js",
+    "/js/app.3a1168643ad4d460926f.hot-update.js": "/js/app.3a1168643ad4d460926f.hot-update.js",
+    "/js/app.132d68c1e2eb9e9fb978.hot-update.js": "/js/app.132d68c1e2eb9e9fb978.hot-update.js",
+    "/js/app.ee8869454e10c5d5c2f2.hot-update.js": "/js/app.ee8869454e10c5d5c2f2.hot-update.js",
+    "/js/app.c0f27b99dcea6fb8ae35.hot-update.js": "/js/app.c0f27b99dcea6fb8ae35.hot-update.js",
+    "/js/app.bb66e84f437df0370115.hot-update.js": "/js/app.bb66e84f437df0370115.hot-update.js",
+    "/js/app.571ad50d4a81757e8ebb.hot-update.js": "/js/app.571ad50d4a81757e8ebb.hot-update.js"
 }
