--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -41,5 +41,6 @@
     "/js/app.ee8869454e10c5d5c2f2.hot-update.js": "/js/app.ee8869454e10c5d5c2f2.hot-update.js",
     "/js/app.c0f27b99dcea6fb8ae35.hot-update.js": "/js/app.c0f27b99dcea6fb8ae35.hot-update.js",
     "/js/app.bb66e84f437df0370115.hot-update.js": "/js/app.bb66e84f437df0370115.hot-update.js",
-    "/js/app.571ad50d4a81757e8ebb.hot-update.js": "/js/app.571ad50d4a81757e8ebb.hot-update.js"
+    "/js/app.571ad50d4a81757e8ebb.hot-update.js": "/js/app.571ad50d4a81757e8ebb.hot-update.js",
+    "/js/app.9db1c2aff28db9d43627.hot-update.js": "/js/app.9db1c2aff28db9d43627.hot-update.js"
 }
