Store intended only if not a guest route

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -42,5 +42,6 @@
     "/js/app.c0f27b99dcea6fb8ae35.hot-update.js": "/js/app.c0f27b99dcea6fb8ae35.hot-update.js",
     "/js/app.bb66e84f437df0370115.hot-update.js": "/js/app.bb66e84f437df0370115.hot-update.js",
     "/js/app.571ad50d4a81757e8ebb.hot-update.js": "/js/app.571ad50d4a81757e8ebb.hot-update.js",
-    "/js/app.9db1c2aff28db9d43627.hot-update.js": "/js/app.9db1c2aff28db9d43627.hot-update.js"
+    "/js/app.9db1c2aff28db9d43627.hot-update.js": "/js/app.9db1c2aff28db9d43627.hot-update.js",
+    "/js/app.caef9ede87349c2a35e5.hot-update.js": "/js/app.caef9ede87349c2a35e5.hot-update.js"
 }
