--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -43,5 +43,15 @@
     "/js/app.bb66e84f437df0370115.hot-update.js": "/js/app.bb66e84f437df0370115.hot-update.js",
     "/js/app.571ad50d4a81757e8ebb.hot-update.js": "/js/app.571ad50d4a81757e8ebb.hot-update.js",
     "/js/app.9db1c2aff28db9d43627.hot-update.js": "/js/app.9db1c2aff28db9d43627.hot-update.js",
-    "/js/app.caef9ede87349c2a35e5.hot-update.js": "/js/app.caef9ede87349c2a35e5.hot-update.js"
+    "/js/app.caef9ede87349c2a35e5.hot-update.js": "/js/app.caef9ede87349c2a35e5.hot-update.js",
+    "/js/app.a2262f02ae2bd26e3c54.hot-update.js": "/js/app.a2262f02ae2bd26e3c54.hot-update.js",
+    "/js/app.d93da8ea300308485819.hot-update.js": "/js/app.d93da8ea300308485819.hot-update.js",
+    "/js/app.9b87e6736e3e76bb1eb9.hot-update.js": "/js/app.9b87e6736e3e76bb1eb9.hot-update.js",
+    "/js/app.d566e0ba65008a8ed7e1.hot-update.js": "/js/app.d566e0ba65008a8ed7e1.hot-update.js",
+    "/js/app.3eec25e6a083c5894123.hot-update.js": "/js/app.3eec25e6a083c5894123.hot-update.js",
+    "/js/app.e398fda95d6da6c65df8.hot-update.js": "/js/app.e398fda95d6da6c65df8.hot-update.js",
+    "/js/app.1973ef1ce671e03937a5.hot-update.js": "/js/app.1973ef1ce671e03937a5.hot-update.js",
+    "/js/app.465ef0cafc352836340a.hot-update.js": "/js/app.465ef0cafc352836340a.hot-update.js",
+    "/js/app.87a887ebaa264f0c1d85.hot-update.js": "/js/app.87a887ebaa264f0c1d85.hot-update.js",
+    "/js/app.591ab92582f4fa8d1673.hot-update.js": "/js/app.591ab92582f4fa8d1673.hot-update.js"
 }
