Make an edit page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -51,5 +51,13 @@
     "/js/app.2770844cd280c6c02c2c.hot-update.js": "/js/app.2770844cd280c6c02c2c.hot-update.js",
     "/js/app.b61f80410db13ea3c1df.hot-update.js": "/js/app.b61f80410db13ea3c1df.hot-update.js",
     "/js/app.7e11936450ca10787dbe.hot-update.js": "/js/app.7e11936450ca10787dbe.hot-update.js",
-    "/js/app.cacfd85b40067aa0dcf2.hot-update.js": "/js/app.cacfd85b40067aa0dcf2.hot-update.js"
+    "/js/app.cacfd85b40067aa0dcf2.hot-update.js": "/js/app.cacfd85b40067aa0dcf2.hot-update.js",
+    "/js/app.95da4b4c4b744a85d397.hot-update.js": "/js/app.95da4b4c4b744a85d397.hot-update.js",
+    "/js/app.5f7da308de52c2ce94bb.hot-update.js": "/js/app.5f7da308de52c2ce94bb.hot-update.js",
+    "/js/app.911121aa9864e0f2f3e8.hot-update.js": "/js/app.911121aa9864e0f2f3e8.hot-update.js",
+    "/js/app.4393d52b02dfa5460761.hot-update.js": "/js/app.4393d52b02dfa5460761.hot-update.js",
+    "/js/app.cdcbf13931c67acf5409.hot-update.js": "/js/app.cdcbf13931c67acf5409.hot-update.js",
+    "/js/app.ab6f5663dd5edc22ad77.hot-update.js": "/js/app.ab6f5663dd5edc22ad77.hot-update.js",
+    "/js/app.4f238beb9365dce93d72.hot-update.js": "/js/app.4f238beb9365dce93d72.hot-update.js",
+    "/js/app.f9eb9c511b8adb476b3a.hot-update.js": "/js/app.f9eb9c511b8adb476b3a.hot-update.js"
 }
