Set up webpack for building CKEditor from source

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,63 +1,3 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/app.8a12fe7a20a5b766f0eb.hot-update.js": "/js/app.8a12fe7a20a5b766f0eb.hot-update.js",
-    "/js/app.fd9d2d54ea56c5150014.hot-update.js": "/js/app.fd9d2d54ea56c5150014.hot-update.js",
-    "/js/app.b6cbb0c52438463452bb.hot-update.js": "/js/app.b6cbb0c52438463452bb.hot-update.js",
-    "/js/app.797f7d4234f9b4cf7222.hot-update.js": "/js/app.797f7d4234f9b4cf7222.hot-update.js",
-    "/js/app.590aeba8b63ea40fcf09.hot-update.js": "/js/app.590aeba8b63ea40fcf09.hot-update.js",
-    "/js/app.ce434ed6251bdd8c20e9.hot-update.js": "/js/app.ce434ed6251bdd8c20e9.hot-update.js",
-    "/js/app.bee1b70b40520b2e91fa.hot-update.js": "/js/app.bee1b70b40520b2e91fa.hot-update.js",
-    "/js/app.a8461c845e618b494366.hot-update.js": "/js/app.a8461c845e618b494366.hot-update.js",
-    "/js/app.e0ccf530ab5f4aaced8d.hot-update.js": "/js/app.e0ccf530ab5f4aaced8d.hot-update.js",
-    "/js/app.aa122fca1d2e4d540b37.hot-update.js": "/js/app.aa122fca1d2e4d540b37.hot-update.js",
-    "/js/app.fda810932ae531cbc3ed.hot-update.js": "/js/app.fda810932ae531cbc3ed.hot-update.js",
-    "/js/app.fa7320391cace8d02459.hot-update.js": "/js/app.fa7320391cace8d02459.hot-update.js",
-    "/js/app.763b1c7b6cd0a5e57e54.hot-update.js": "/js/app.763b1c7b6cd0a5e57e54.hot-update.js",
-    "/js/app.133e7a825d80c9267c3f.hot-update.js": "/js/app.133e7a825d80c9267c3f.hot-update.js",
-    "/js/app.740ff552ecb542d6eee6.hot-update.js": "/js/app.740ff552ecb542d6eee6.hot-update.js",
-    "/js/app.bacd16b5a50b30074b27.hot-update.js": "/js/app.bacd16b5a50b30074b27.hot-update.js",
-    "/js/app.93f0d063b0668dbad817.hot-update.js": "/js/app.93f0d063b0668dbad817.hot-update.js",
-    "/js/app.2e0424e9f7d83fc125de.hot-update.js": "/js/app.2e0424e9f7d83fc125de.hot-update.js",
-    "/js/app.7ba9b715549fc3020539.hot-update.js": "/js/app.7ba9b715549fc3020539.hot-update.js",
-    "/js/app.122618f6027f6a93416d.hot-update.js": "/js/app.122618f6027f6a93416d.hot-update.js",
-    "/js/app.0ed36bf6ccad93b2381b.hot-update.js": "/js/app.0ed36bf6ccad93b2381b.hot-update.js",
-    "/js/app.d3ed1ba77a2f06e90e76.hot-update.js": "/js/app.d3ed1ba77a2f06e90e76.hot-update.js",
-    "/js/app.53c21188d32f9692e8c9.hot-update.js": "/js/app.53c21188d32f9692e8c9.hot-update.js",
-    "/js/app.45da4adb7c88e2cbc8f6.hot-update.js": "/js/app.45da4adb7c88e2cbc8f6.hot-update.js",
-    "/js/app.48872779e063d0a76060.hot-update.js": "/js/app.48872779e063d0a76060.hot-update.js",
-    "/js/app.328b23588d493dd2cbf3.hot-update.js": "/js/app.328b23588d493dd2cbf3.hot-update.js",
-    "/js/app.8f92a990b4472de26a87.hot-update.js": "/js/app.8f92a990b4472de26a87.hot-update.js",
-    "/js/app.82bd5a0152bb0cbb277f.hot-update.js": "/js/app.82bd5a0152bb0cbb277f.hot-update.js",
-    "/js/app.dc8ce91cdc865f79de9f.hot-update.js": "/js/app.dc8ce91cdc865f79de9f.hot-update.js",
-    "/js/app.1f5a68d91446bca44bd7.hot-update.js": "/js/app.1f5a68d91446bca44bd7.hot-update.js",
-    "/js/app.d8c97ac8c822827bd00c.hot-update.js": "/js/app.d8c97ac8c822827bd00c.hot-update.js",
-    "/js/app.4b21578e7b51c7538e2b.hot-update.js": "/js/app.4b21578e7b51c7538e2b.hot-update.js",
-    "/js/app.d956564682e4b01a8f98.hot-update.js": "/js/app.d956564682e4b01a8f98.hot-update.js",
-    "/js/app.b5a6066b71b92c4e2575.hot-update.js": "/js/app.b5a6066b71b92c4e2575.hot-update.js",
-    "/js/app.71bcd234bd6055664a48.hot-update.js": "/js/app.71bcd234bd6055664a48.hot-update.js",
-    "/js/app.3df6e5543cf11ff67e20.hot-update.js": "/js/app.3df6e5543cf11ff67e20.hot-update.js",
-    "/js/app.223a41b4cd3c579cb293.hot-update.js": "/js/app.223a41b4cd3c579cb293.hot-update.js",
-    "/js/app.6e39e977185552cfe26d.hot-update.js": "/js/app.6e39e977185552cfe26d.hot-update.js",
-    "/js/app.0f9bafcc598b2a7f590d.hot-update.js": "/js/app.0f9bafcc598b2a7f590d.hot-update.js",
-    "/js/app.0b418f99e640fb280229.hot-update.js": "/js/app.0b418f99e640fb280229.hot-update.js",
-    "/js/app.819e6af7c27748200635.hot-update.js": "/js/app.819e6af7c27748200635.hot-update.js",
-    "/js/app.49140260a49daff1ee4d.hot-update.js": "/js/app.49140260a49daff1ee4d.hot-update.js",
-    "/js/app.35a62ab3221c0e3f1e8b.hot-update.js": "/js/app.35a62ab3221c0e3f1e8b.hot-update.js",
-    "/js/app.4bd37fac5ae67e0ca374.hot-update.js": "/js/app.4bd37fac5ae67e0ca374.hot-update.js",
-    "/js/app.289fe604f9e0f27d44a4.hot-update.js": "/js/app.289fe604f9e0f27d44a4.hot-update.js",
-    "/js/app.51276771e6f798db77d9.hot-update.js": "/js/app.51276771e6f798db77d9.hot-update.js",
-    "/js/app.ddb17a665534055fa22b.hot-update.js": "/js/app.ddb17a665534055fa22b.hot-update.js",
-    "/js/app.3f000cdab3ebca5f3995.hot-update.js": "/js/app.3f000cdab3ebca5f3995.hot-update.js",
-    "/js/app.2770844cd280c6c02c2c.hot-update.js": "/js/app.2770844cd280c6c02c2c.hot-update.js",
-    "/js/app.b61f80410db13ea3c1df.hot-update.js": "/js/app.b61f80410db13ea3c1df.hot-update.js",
-    "/js/app.7e11936450ca10787dbe.hot-update.js": "/js/app.7e11936450ca10787dbe.hot-update.js",
-    "/js/app.cacfd85b40067aa0dcf2.hot-update.js": "/js/app.cacfd85b40067aa0dcf2.hot-update.js",
-    "/js/app.95da4b4c4b744a85d397.hot-update.js": "/js/app.95da4b4c4b744a85d397.hot-update.js",
-    "/js/app.5f7da308de52c2ce94bb.hot-update.js": "/js/app.5f7da308de52c2ce94bb.hot-update.js",
-    "/js/app.911121aa9864e0f2f3e8.hot-update.js": "/js/app.911121aa9864e0f2f3e8.hot-update.js",
-    "/js/app.4393d52b02dfa5460761.hot-update.js": "/js/app.4393d52b02dfa5460761.hot-update.js",
-    "/js/app.cdcbf13931c67acf5409.hot-update.js": "/js/app.cdcbf13931c67acf5409.hot-update.js",
-    "/js/app.ab6f5663dd5edc22ad77.hot-update.js": "/js/app.ab6f5663dd5edc22ad77.hot-update.js",
-    "/js/app.4f238beb9365dce93d72.hot-update.js": "/js/app.4f238beb9365dce93d72.hot-update.js",
-    "/js/app.f9eb9c511b8adb476b3a.hot-update.js": "/js/app.f9eb9c511b8adb476b3a.hot-update.js"
+    "/js/app.js": "/js/app.js"
 }
