--- a/package.json
+++ b/package.json
@@ -23,12 +23,22 @@
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "webpack-chain": "^6.5.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-basic-styles": "^20.0.0",
         "@ckeditor/ckeditor5-build-classic": "^20.0.0",
+        "@ckeditor/ckeditor5-dev-webpack-plugin": "^21.0.0",
+        "@ckeditor/ckeditor5-editor-classic": "^20.0.0",
+        "@ckeditor/ckeditor5-essentials": "^20.0.0",
+        "@ckeditor/ckeditor5-font": "^20.0.0",
+        "@ckeditor/ckeditor5-mention": "^20.0.0",
+        "@ckeditor/ckeditor5-paragraph": "^20.0.0",
+        "@ckeditor/ckeditor5-theme-lark": "^20.0.0",
         "@ckeditor/ckeditor5-vue": "^1.0.1",
         "@vue/composition-api": "^1.0.0-beta.1",
+        "raw-loader": "^4.0.1",
         "vue-router": "^3.3.4"
     }
 }
