Add a few CKEditor plugins

--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
         "@ckeditor/ckeditor5-editor-classic": "^20.0.0",
         "@ckeditor/ckeditor5-essentials": "^20.0.0",
         "@ckeditor/ckeditor5-font": "^20.0.0",
+        "@ckeditor/ckeditor5-heading": "^20.0.0",
+        "@ckeditor/ckeditor5-indent": "^20.0.0",
+        "@ckeditor/ckeditor5-link": "^20.0.0",
         "@ckeditor/ckeditor5-mention": "^20.0.0",
         "@ckeditor/ckeditor5-paragraph": "^20.0.0",
+        "@ckeditor/ckeditor5-remove-format": "^20.0.0",
         "@ckeditor/ckeditor5-theme-lark": "^20.0.0",
         "@ckeditor/ckeditor5-vue": "^1.0.1",
         "@vue/composition-api": "^1.0.0-beta.1",
