Add autoformat, codeblock, and list plugins

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,8 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js",
+    "/js/app.141adbcd08ab4d8482e4.hot-update.js": "/js/app.141adbcd08ab4d8482e4.hot-update.js",
+    "/js/app.b5d3886fe590d4103171.hot-update.js": "/js/app.b5d3886fe590d4103171.hot-update.js",
+    "/js/app.be2ce99f5e4a9870703f.hot-update.js": "/js/app.be2ce99f5e4a9870703f.hot-update.js",
+    "/js/app.a191172a35723c36df10.hot-update.js": "/js/app.a191172a35723c36df10.hot-update.js",
+    "/js/app.a1bf17ae119ca88a70b1.hot-update.js": "/js/app.a1bf17ae119ca88a70b1.hot-update.js"
 }
