--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "webpack-chain": "^6.5.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-autoformat": "^20.0.0",
         "@ckeditor/ckeditor5-basic-styles": "^20.0.0",
         "@ckeditor/ckeditor5-build-classic": "^20.0.0",
+        "@ckeditor/ckeditor5-code-block": "^20.0.0",
         "@ckeditor/ckeditor5-dev-webpack-plugin": "^21.0.0",
         "@ckeditor/ckeditor5-editor-classic": "^20.0.0",
         "@ckeditor/ckeditor5-essentials": "^20.0.0",
@@ -36,6 +38,7 @@
         "@ckeditor/ckeditor5-heading": "^20.0.0",
         "@ckeditor/ckeditor5-indent": "^20.0.0",
         "@ckeditor/ckeditor5-link": "^20.0.0",
+        "@ckeditor/ckeditor5-list": "^20.0.0",
         "@ckeditor/ckeditor5-mention": "^20.0.0",
         "@ckeditor/ckeditor5-paragraph": "^20.0.0",
         "@ckeditor/ckeditor5-remove-format": "^20.0.0",
