Set editor body height to fill the screen

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -97,5 +97,20 @@
     "/js/app.c3bc0c477225bf28c83b.hot-update.js": "/js/app.c3bc0c477225bf28c83b.hot-update.js",
     "/js/app.52cb91dfb355138cd232.hot-update.js": "/js/app.52cb91dfb355138cd232.hot-update.js",
     "/js/app.e661534ea7d4ff88959c.hot-update.js": "/js/app.e661534ea7d4ff88959c.hot-update.js",
-    "/js/app.494b3e9c99b43eec4c07.hot-update.js": "/js/app.494b3e9c99b43eec4c07.hot-update.js"
+    "/js/app.494b3e9c99b43eec4c07.hot-update.js": "/js/app.494b3e9c99b43eec4c07.hot-update.js",
+    "/js/app.ae5ab230e527a920c5d8.hot-update.js": "/js/app.ae5ab230e527a920c5d8.hot-update.js",
+    "/js/app.c23ca0965586a0d0b81c.hot-update.js": "/js/app.c23ca0965586a0d0b81c.hot-update.js",
+    "/js/app.fbe967121f39c901e8e0.hot-update.js": "/js/app.fbe967121f39c901e8e0.hot-update.js",
+    "/js/app.d48b5d49851f38a74192.hot-update.js": "/js/app.d48b5d49851f38a74192.hot-update.js",
+    "/js/app.575e577bc8e56240ba05.hot-update.js": "/js/app.575e577bc8e56240ba05.hot-update.js",
+    "/js/app.035d973d26f36431bab1.hot-update.js": "/js/app.035d973d26f36431bab1.hot-update.js",
+    "/js/app.3713e3dc26850238a487.hot-update.js": "/js/app.3713e3dc26850238a487.hot-update.js",
+    "/js/app.d94444e70235e8d15c9f.hot-update.js": "/js/app.d94444e70235e8d15c9f.hot-update.js",
+    "/js/app.ea57f81119c2aa69178c.hot-update.js": "/js/app.ea57f81119c2aa69178c.hot-update.js",
+    "/js/app.d169bb33c250aea3f9de.hot-update.js": "/js/app.d169bb33c250aea3f9de.hot-update.js",
+    "/js/app.b98af1554daba4e965f4.hot-update.js": "/js/app.b98af1554daba4e965f4.hot-update.js",
+    "/js/app.308c05c000b2808275cd.hot-update.js": "/js/app.308c05c000b2808275cd.hot-update.js",
+    "/js/app.32155383d1641002d2bc.hot-update.js": "/js/app.32155383d1641002d2bc.hot-update.js",
+    "/js/app.4e87b8ce62f03635069b.hot-update.js": "/js/app.4e87b8ce62f03635069b.hot-update.js",
+    "/js/app.bca000aece06966917da.hot-update.js": "/js/app.bca000aece06966917da.hot-update.js"
 }
